[gd_scene load_steps=4 format=3 uid="uid://d0gtt2fgdaddt"]

[ext_resource type="Texture2D" uid="uid://c7bni1sdaaaqn" path="res://assets/sprites/Desk_Keyboard.png" id="1_wrklc"]
[ext_resource type="Script" path="res://src/game/keyboard.gd" id="2_d6cy8"]
[ext_resource type="Script" path="res://src/game/cover_keys.gd" id="3_j7gvb"]

[node name="Keyboard" type="Sprite2D"]
position = Vector2(0, -33)
texture = ExtResource("1_wrklc")
hframes = 2
script = ExtResource("2_d6cy8")

[node name="Shift" type="ColorRect" parent="."]
offset_left = -28.0
offset_top = 4.0
offset_right = -25.0
offset_bottom = 7.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="ESC" type="ColorRect" parent="."]
offset_left = -28.0
offset_top = -10.0
offset_right = -25.0
offset_bottom = -7.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="Ctrl" type="ColorRect" parent="."]
offset_left = -28.0
offset_top = 7.0
offset_right = -24.0
offset_bottom = 10.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="Backspace" type="ColorRect" parent="."]
offset_left = 11.0
offset_top = -5.0
offset_right = 18.0
offset_bottom = -2.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="Space" type="ColorRect" parent="."]
offset_left = -15.0
offset_top = 7.0
offset_right = 3.0
offset_bottom = 10.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="123" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = -5.0
offset_right = -25.0
offset_bottom = -5.0
script = ExtResource("3_j7gvb")
color = Color(0.207843, 0.207843, 0.25098, 1)
count = 12

[node name="1" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_right = 3.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="2" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_right = 6.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="3" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_right = 9.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="4" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_right = 12.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="5" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 12.0
offset_right = 15.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="6" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 15.0
offset_right = 18.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="7" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 18.0
offset_right = 21.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="8" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_right = 24.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="9" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_right = 27.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="0" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 27.0
offset_right = 30.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="minus" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 30.0
offset_right = 33.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="equal" type="ColorRect" parent="123"]
visible = false
layout_mode = 0
offset_left = 33.0
offset_right = 36.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="QWE" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -24.0
offset_top = -2.0
offset_right = -24.0
offset_bottom = -2.0
script = ExtResource("3_j7gvb")
color = Color(0.207843, 0.207843, 0.25098, 1)
count = 12

[node name="q" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_right = 3.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="w" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_right = 6.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="e" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_right = 9.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="r" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_right = 12.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="t" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 12.0
offset_right = 15.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="y" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 15.0
offset_right = 18.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="u" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 18.0
offset_right = 21.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="i" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_right = 24.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="o" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_right = 27.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="p" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 27.0
offset_right = 30.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="bracket_left" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 30.0
offset_right = 33.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="bracket_right" type="ColorRect" parent="QWE"]
visible = false
layout_mode = 0
offset_left = 33.0
offset_right = 36.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="ASD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -22.0
offset_top = 1.0
offset_right = -22.0
offset_bottom = 1.0
script = ExtResource("3_j7gvb")
color = Color(0.207843, 0.207843, 0.25098, 1)
count = 12

[node name="a" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_right = 3.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="s" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_right = 6.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="d" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_right = 9.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="f" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_right = 12.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="g" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 12.0
offset_right = 15.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="h" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 15.0
offset_right = 18.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="j" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 18.0
offset_right = 21.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="k" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_right = 24.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="l" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_right = 27.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="semicolon" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 27.0
offset_right = 30.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="single_quote" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 30.0
offset_right = 33.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="backslash" type="ColorRect" parent="ASD"]
visible = false
layout_mode = 0
offset_left = 33.0
offset_right = 36.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="ZXC" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -21.0
offset_top = 4.0
offset_right = -21.0
offset_bottom = 4.0
script = ExtResource("3_j7gvb")
color = Color(0.207843, 0.207843, 0.25098, 1)
count = 10

[node name="z" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_right = 3.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="x" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_right = 6.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="c" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_right = 9.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="v" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_right = 12.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="b" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_left = 12.0
offset_right = 15.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="n" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_left = 15.0
offset_right = 18.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="m" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_left = 18.0
offset_right = 21.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="comma" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_left = 21.0
offset_right = 24.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="period" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_right = 27.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="slash" type="ColorRect" parent="ZXC"]
visible = false
layout_mode = 0
offset_left = 27.0
offset_right = 30.0
offset_bottom = 3.0
color = Color(0.207843, 0.207843, 0.25098, 1)
